--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -116,12 +116,11 @@
                                 align-items: flex-end;
                                 right: -1rem;
                                 top: 5.5rem;
-                                width: 15rem;
-                                height: 20rem;
+                                width: 16rem;
+                                height: 25rem;
                                 background-color: #8446e7a4;
                                 border-radius: 16px;
                                 li{
-                                    margin-right: 1rem;
                                     &:not(:first-child){
                                         margin-left: 0rem;
                                     }
@@ -131,6 +130,7 @@
                                     a{
                                         display: block;
                                         font-size: 2.5rem;
+                                        padding: 1rem 2rem;
                                         cursor: pointer;
                                     }
                                 }
