--- a/scss/main.css
+++ b/scss/main.css
@@ -76,6 +76,12 @@ h2, h3, h4, h5 {
     max-width: 13rem;
   }
 }
+@media (max-width: 600px) {
+  .card-skills {
+    opacity: 1;
+    filter: none;
+  }
+}
 
 .card-projects {
   display: flex;
@@ -125,6 +131,8 @@ h2, h3, h4, h5 {
 @media (max-width: 600px) {
   .card-projects {
     width: 30rem;
+    opacity: 1;
+    filter: none;
   }
 }
 
@@ -161,6 +169,8 @@ h2, h3, h4, h5 {
 @media (max-width: 600px) {
   .card-contact {
     width: 14rem;
+    opacity: 1;
+    filter: none;
   }
 }
 
@@ -294,13 +304,10 @@ h2, h3, h4, h5 {
     align-items: flex-end;
     right: -1rem;
     top: 5.5rem;
-    width: 15rem;
-    height: 20rem;
+    width: 16rem;
+    height: 25rem;
     background-color: rgba(132, 70, 231, 0.6431372549);
     border-radius: 16px;
-  }
-  .s-nav nav .container .right .menu-mobile .mobile.active li {
-    margin-right: 1rem;
   }
   .s-nav nav .container .right .menu-mobile .mobile.active li:not(:first-child) {
     margin-left: 0rem;
@@ -311,6 +318,7 @@ h2, h3, h4, h5 {
   .s-nav nav .container .right .menu-mobile .mobile.active li a {
     display: block;
     font-size: 2.5rem;
+    padding: 1rem 2rem;
     cursor: pointer;
   }
 }
