--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -118,4 +118,9 @@
         opacity: 1;
         filter: none;
     }
+    @media (max-width:440px){
+        width: 22rem;
+        opacity: 1;
+        filter: none;
+    }
 }
